--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,10 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#1C1C1E</item>
-        <item name="android:colorBackground">#1C1C1E</item>
         <item name="android:statusBarColor">#1C1C1E</item>
         <item name="android:navigationBarColor">#1C1C1E</item>
         <item name="android:textColor">#000000</item>
